build: Enable TypeScript composite projects, standardize target to ES2022, and remove specific strictness options from tsconfig files.

--- a/dashboard/tsconfig.node.json
+++ b/dashboard/tsconfig.node.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-    "target": "ES2023",
+    "composite": true,
+    "target": "ES2022",
     "lib": [
-      "ES2023"
+      "ES2022"
     ],
     "module": "ESNext",
     "types": [
@@ -20,9 +21,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "vite.config.ts"
